--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,27 +19,40 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/male_button"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/genderChoice"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/male_symbol" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/female_button"
-        android:layout_below="@+id/male_button"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/female_symbol" />
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/female_button"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/female_symbol"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_dark" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/intersex_button"
-        android:layout_below="@+id/female_button"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/male_female_symbol" />
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/male_button"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/male_symbol"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_dark" />
+
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/intersex_button"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/male_female_symbol"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_dark" />
+    </LinearLayout>
+
 </RelativeLayout>
